<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SMSBot!</string>
    <string name="app_name">SMSBot</string>
    <string name="phone_label">Recipient Phone Number</string>
    <string name="message_label">SMS Message</string>
    <string name="send_label">Send SMS Message</string>

    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="about">About</string>

    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="server_label">XMPP Server:</string>
    <string name="actions_label">Actions:</string>
    <string name="save_label">Save Settings</string>
    <string name="reset_label">Reset Settings</string>
    <string name="settings_saved_label">Settings saved.</string>
    <string name="settings_reset_label">Settings reset.</string>

    <string name="crash_toast_text">Whoops - the app has crashed. Sending a report to the developer.</string>

    <string name="service_started">SMSBot service started.</string>

    <string name="toggle_connection">Toggle Connection</string>
    <string name="xmpp_connect">Connect</string>
    <string name="xmpp_disconnect">Disconnect</string>
</resources>
