<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/phone_label" />
	<EditText android:layout_width="fill_parent" android:id="@+id/phone_field" android:layout_height="wrap_content" android:singleLine="true" android:inputType="phone" />
	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/message_label" />
	<EditText android:layout_width="fill_parent" android:id="@+id/message_field" android:layout_height="wrap_content" android:gravity="top" android:inputType="textShortMessage" />
	<Button android:id="@+id/send_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:text="@string/send_label" />
	<Button android:id="@+id/toggle_connection" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/toggle_connection" />
</LinearLayout>
